[gd_scene load_steps=5 format=3 uid="uid://babocisvslxfa"]

[ext_resource type="Script" uid="uid://4m5fotean0lk" path="res://card_view.gd" id="1_po74q"]
[ext_resource type="PackedScene" uid="uid://by3hxdisgs3ho" path="res://card_3d.tscn" id="2_po74q"]
[ext_resource type="Script" uid="uid://cyikt2alkoq26" path="res://components/click_and_draggable.gd" id="3_hvbp4"]

[sub_resource type="ViewportTexture" id="ViewportTexture_po74q"]
viewport_path = NodePath("SubViewport")

[node name="CardView" type="Node2D"]
script = ExtResource("1_po74q")

[node name="Node2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = SubResource("ViewportTexture_po74q")

[node name="SubViewport" type="SubViewport" parent="."]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(650, 650)

[node name="Card3D" parent="SubViewport" instance=ExtResource("2_po74q")]

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseArea"]
polygon = PackedVector2Array(-104, 152, -104, -120, -48, -176, 48, -176, 104, -120, 104, 152)

[node name="DragPivot" type="Marker2D" parent="."]
position = Vector2(0, -115)

[node name="ClickAndDraggable" type="Node2D" parent="." node_paths=PackedStringArray("mouse_area")]
script = ExtResource("3_hvbp4")
mouse_area = NodePath("../MouseArea")
metadata/_custom_type_script = "uid://cyikt2alkoq26"
